--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,18 +7,13 @@ builds:
   - env:
       - CGO_ENABLED=0
     ldflags:
-      - -s -w -X github.com/xujiahua/tcp-multiplexer/cmd.version={{.Version}} -X github.com/xujiahua/tcp-multiplexer/cmd.commit={{.Commit}} -X github.com/xujiahua/tcp-multiplexer/cmd.date={{.Date}} -X github.com/xujiahua/tcp-multiplexer/cmd.builtBy=goreleaser
+      - -s -w -X github.com/ingmarstein/tcp-multiplexer/cmd.version={{.Version}} -X github.com/ingmarstein/tcp-multiplexer/cmd.commit={{.Commit}} -X github.com/ingmarstein/tcp-multiplexer/cmd.date={{.Date}} -X github.com/ingmarstein/tcp-multiplexer/cmd.builtBy=goreleaser
     goos:
       - linux
       - windows
       - darwin
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+  - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
 checksum:
   name_template: 'checksums.txt'
 snapshot:
@@ -29,3 +24,6 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+dockers:
+  - image_templates:
+      - ingmarstein/tcp-multiplexer
