--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -39,6 +39,7 @@ kos:
       - linux/amd64
       - linux/arm64
       - linux/arm/v6
+      - linux/arm/v7
   - id: tcp-multiplexer-dockerhub
     build: tcp-multiplexer
     repository: ingmarstein/tcp-multiplexer
@@ -51,3 +52,4 @@ kos:
       - linux/amd64
       - linux/arm64
       - linux/arm/v6
+      - linux/arm/v7
