Add Docker manifests for images on ghcr.io

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -73,15 +73,27 @@ dockers:
     build_flag_templates:
       - "--platform=linux/arm/v7"
 docker_manifests:
-  - name_template: "ingmarstein/tcp-multiplexer:{{ .Version }}"
+  - name_template: "docker.io/ingmarstein/tcp-multiplexer:{{ .Version }}"
     image_templates:
-      - "ingmarstein/tcp-multiplexer:{{ .Version }}-amd64"
-      - "ingmarstein/tcp-multiplexer:{{ .Version }}-arm64"
-      - "ingmarstein/tcp-multiplexer:{{ .Version }}-arm-v6"
-      - "ingmarstein/tcp-multiplexer:{{ .Version }}-arm-v7"
-  - name_template: "ingmarstein/tcp-multiplexer:latest"
+      - "docker.io/ingmarstein/tcp-multiplexer:{{ .Version }}-amd64"
+      - "docker.io/ingmarstein/tcp-multiplexer:{{ .Version }}-arm64"
+      - "docker.io/ingmarstein/tcp-multiplexer:{{ .Version }}-arm-v6"
+      - "docker.io/ingmarstein/tcp-multiplexer:{{ .Version }}-arm-v7"
+  - name_template: "docker.io/ingmarstein/tcp-multiplexer:latest"
     image_templates:
-      - "ingmarstein/tcp-multiplexer:latest-amd64"
-      - "ingmarstein/tcp-multiplexer:latest-arm64"
-      - "ingmarstein/tcp-multiplexer:latest-arm-v6"
-      - "ingmarstein/tcp-multiplexer:latest-arm-v7"
+      - "docker.io/ingmarstein/tcp-multiplexer:latest-amd64"
+      - "docker.io/ingmarstein/tcp-multiplexer:latest-arm64"
+      - "docker.io/ingmarstein/tcp-multiplexer:latest-arm-v6"
+      - "docker.io/ingmarstein/tcp-multiplexer:latest-arm-v7"
+  - name_template: "ghcr.io/ingmarstein/tcp-multiplexer:{{ .Version }}"
+    image_templates:
+      - "ghcr.io/ingmarstein/tcp-multiplexer:{{ .Version }}-amd64"
+      - "ghcr.io/ingmarstein/tcp-multiplexer:{{ .Version }}-arm64"
+      - "ghcr.io/ingmarstein/tcp-multiplexer:{{ .Version }}-arm-v6"
+      - "ghcr.io/ingmarstein/tcp-multiplexer:{{ .Version }}-arm-v7"
+  - name_template: "ghcr.io/ingmarstein/tcp-multiplexer:latest"
+    image_templates:
+      - "ghcr.io/ingmarstein/tcp-multiplexer:latest-amd64"
+      - "ghcr.io/ingmarstein/tcp-multiplexer:latest-arm64"
+      - "ghcr.io/ingmarstein/tcp-multiplexer:latest-arm-v6"
+      - "ghcr.io/ingmarstein/tcp-multiplexer:latest-arm-v7"
